# text-to-image-generative-AI

./: .gitignore  Fine_tuning_HF_SD_model_using_DreamBooth_LoRA.ipynb  README.md  SDiff_finetuning.py  SDiff_inference_automatic_model_selection_adaptive_prompting_with_ChatGPT.py  SDiff_inference_basic.py  SDiff_inference_multiuser_custom_models.py  default_config.yaml  download_sdiff_model.py  images_functions.py  images_parameters.json  initial_setup.sh  pyproject.toml  requirements.txt  requirements_manual.txt  requirements_torch13.txt  slugify.py
notebooks/: SDiff_finetuning.ipynb  SDiff_inference_automatic_model_selection_adaptive_prompting_with_ChatGPT.ipynb  SDiff_inference_basic.ipynb  SDiff_inference_multiuser_custom_models.ipynb
static/: images_finetuning.js  images_inference.js
templates/: SDiff_finetuning.html  SDiff_inference_automatic_model_selection_adaptive_prompting_with_ChatGPT.html  SDiff_inference_basic.html  SDiff_inference_multiuser_custom_models.html
