[tool.poetry]
name = "sdiff"
version = "0.1.0"
description = ""
authors = ["Konstantin Kuteykin <konstantin.kuteykin@upf.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
lit = "14"
torch = "1.13.1"
accelerate = "0.17.1"
torchvision = "0.14.1"
diffusers = "0.14.0"
transformers = "4.27.1"
ftfy = "6.1.1"
triton = "2.0.0"
tensorboard = "2.11.2"
jinja2 = "3.1.2"
xformers = "0.0.16rc425"
bitsandbytes = "0.37.1"
flask = "2.2.3"
flask-cors = "3.0.10"
waitress = "2.1.2"
openai = ">=0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
